@@ -30,11 +30,6 @@ Here is an example configuration:
 # logical properties.
 tags: ["service-X", "web-tier"]
 
-# Uncomment the following if you want to ignore transactions created
-# by the server on which the shipper is installed. This option is useful
-# to remove duplicates if shippers are installed on multiple servers.
-ignore_outgoing: true
-
 # How often (in seconds) shippers are publishing their IPs to the topology map.
 # The default is 10 seconds.
 refresh_topology_freq: 10
@@ -123,38 +118,6 @@ fields:
   instance_id: i-10a64379
   region: us-east-1
 ------------------------------------------------------------------------------
-
-===== ignore_outgoing
-
-If the `ignore_outgoing` option is enabled, the Beat ignores all the
-transactions initiated from the server running the Beat.
-
-This is useful when two Beats publish the same transactions. Because one Beat
-sees the transaction in its outgoing queue and the other sees it in its incoming
-queue, you can end up with duplicate transactions. To remove the duplicates, you
-can enable the `ignore_outgoing` option on one of the servers.
-
-For example, in the following scenario, you see a 3-server architecture
-where a Beat is installed on each server. t1 is the transaction exchanged between
-Server1 and Server2, and t2 is the transaction between Server2 and Server3.
-
-image:./images/option_ignore_outgoing.png[Beats Architecture]
-
-By default, each transaction is indexed twice because Beat2
-sees both transactions. So you would see the following published transactions
-(when `ignore_outgoing` is false):
-
- - Beat1: t1
- - Beat2: t1 and t2
- - Beat3: t2
-
-To avoid duplicates, you can force your Beats to send only the incoming
-transactions and ignore the transactions created by the local server. So you would
-see the following published transactions (when `ignore_outgoing` is true):
-
- - Beat1: none
- - Beat2: t1
- - Beat3: t2
 
 ===== refresh_topology_freq
 
